--- a/HPC_and_Singularty/HPC_Singularity_Presentation.html
+++ b/HPC_and_Singularty/HPC_Singularity_Presentation.html
@@ -450,7 +450,7 @@ srun --time=0-00:00:10 STAR --help
 .baby-bear[
 + [Singularity Documentation](https://www.sylabs.io/guides/2.5/user-guide/index.html)&lt;br&gt;&lt;/br&gt;
 + [BioContainers](https://biocontainers.pro/)&lt;br&gt;&lt;/br&gt;
-+ [This Presentation in Markdown Format](./HPC_and_Singlarty.html)&lt;br&gt;&lt;/br&gt;
++ [This Presentation in Markdown Format](./HPC_and_Singularty.html)&lt;br&gt;&lt;/br&gt;
 + [Vagrant Boxes for building containers locally](https://app.vagrantup.com/sylabs)&lt;br&gt;&lt;/br&gt;
 + [My Email Address](mailto:Alexis.Lucattini@agrf.org.au)&lt;br&gt;&lt;/br&gt;
 + [Module/Container Gist](https://gist.github.com/alexiswl/6974927ab8da81f1e3dc2222db467486)
