Re-references after typo changes

--- a/HPC_and_Singularity/HPC_Singularity_Presentation.html
+++ b/HPC_and_Singularity/HPC_Singularity_Presentation.html
@@ -4,7 +4,7 @@
     <title>HPC and Singularity</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alexis Lucattini" />
-    <link rel="stylesheet" href="libs\remark-css-0.0.1\HPC_and_Singularty.css" type="text/css" />
+    <link rel="stylesheet" href="libs\remark-css-0.0.1\HPC_and_Singularity.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -450,7 +450,7 @@ srun --time=0-00:00:10 STAR --help
 .baby-bear[
 + [Singularity Documentation](https://www.sylabs.io/guides/2.5/user-guide/index.html)&lt;br&gt;&lt;/br&gt;
 + [BioContainers](https://biocontainers.pro/)&lt;br&gt;&lt;/br&gt;
-+ [This Presentation in Markdown Format](./HPC_and_Singularty.html)&lt;br&gt;&lt;/br&gt;
++ [This Presentation in Markdown Format](./HPC_and_Singularity.html)&lt;br&gt;&lt;/br&gt;
 + [Vagrant Boxes for building containers locally](https://app.vagrantup.com/sylabs)&lt;br&gt;&lt;/br&gt;
 + [My Email Address](mailto:Alexis.Lucattini@agrf.org.au)&lt;br&gt;&lt;/br&gt;
 + [Module/Container Gist](https://gist.github.com/alexiswl/6974927ab8da81f1e3dc2222db467486)
