--- a/HPC_and_Singularity/HPC_and_Singularity.html
+++ b/HPC_and_Singularity/HPC_and_Singularity.html
@@ -744,6 +744,10 @@ centrifuge --help
 # Try running help script through slurm
 srun --time=0-00:00:10 centrifuge --help</code></pre>
 </div>
+<div id="references" class="section level1">
+<h1>References</h1>
+<p>.baby-bear[ + <a href="https://www.sylabs.io/guides/2.5/user-guide/index.html">Singularity Documentation</a><br /> + <a href="https://biocontainers.pro/">BioContainers</a><br /> + <a href="./HPC_Singularity_Presentation.html">This Document in Presentation Format</a><br /> + <a href="https://app.vagrantup.com/sylabs">Vagrant Boxes for building containers locally</a><br /> + <a href="mailto:Alexis.Lucattini@agrf.org.au">My Email Address</a><br /> + <a href="https://gist.github.com/alexiswl/6974927ab8da81f1e3dc2222db467486">Module/Container Gist</a>]</p>
+</div>
 
 
 
