--- a/Long_Reads_QLD/Long_Reads_QLD.html
+++ b/Long_Reads_QLD/Long_Reads_QLD.html
@@ -1,19 +1,22 @@
----
-title: "Beyond Short Read Sequencing"
-subtitle: "Applications of Long Reads"
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+  <head>
+    <title>Beyond Short Read Sequencing</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="Alexis Lucattini" />
+    <link rel="stylesheet" href="libs\remark-css-0.0.1\Long_Reads_QLD.css" type="text/css" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
 
-author: "Alexis Lucattini"
-date: "Mon 10 Jun 2019"
+# Beyond Short Read Sequencing
+## Applications of Long Reads
+### Alexis Lucattini
+### Mon 10 Jun 2019
 
-output:
-  xaringan::moon_reader:
-    css: "libs/remark-css-0.0.1/Long_Reads_QLD.css"
-    lib_dir: libs
-    nature:
-      highlightStyle: pygments
-      highlightLines: true
-      countIncrementalSlides: false
 ---
+
 
 ## Beyond Short Reads
 
@@ -29,6 +32,7 @@ output:
 .large[Platforms]
 * ONT
 * PacBio
+* 10X*
 ]
 
 
@@ -39,9 +43,6 @@ What are the benefits of long reads.
 With short read sequencing, haplotyping information can be conveyed as long as there's no homogeneity for 300 bps. This often means that a SNP on one exon cannot be determined to be linked to a SNP on another exon for a given individual.
 Both ONT and PacBio offer single-molecule sequencing, the DNA is not amplified prior to entering the flowcell meaning additional modifications such as methylation can be detected with high coverage.
 More commonly long-reads are known for resolving scaffolds for genome assembly. Short-reads simply cannot overcome repeat regions longer than their read-length.
-
-# TODO 
-Add ONT and Pacbio image on the columns tag
 
 # ALL TODOS
 PACBIO TOOLS -
@@ -78,8 +79,6 @@ Denovo assemblies will remain really hard as labs try to complete tasks in the m
 
 ---
 
-class: long-slide
-
 ## New methods for standard tasks
 .pull-left[
 .baby-bear[
@@ -113,8 +112,6 @@ While the standard fastq format is still used, getting to fastqs is not trivial.
 
 ---
 
-class: long-slide
-
 # Minimap2
 
 * Current gold-standard aligner for ONT and PacBio genomic data.
@@ -133,8 +130,6 @@ class: long-slide
 CAN BE BOth PROMETHION AND PACBIO
 
 ---
-
-class: long-slide
 
 # The CS tag and MD tag
 .pull-left[
@@ -168,8 +163,6 @@ MAYBE TODO Add in slide with minimap2 and nglmr
 
 ---
 
-class: ont-slide
-
 ## Nanopore Sequencing - PMI
 
 .pull-left[
@@ -181,7 +174,6 @@ class: ont-slide
 * Low accuracy
 * Lower yields
 ]
-
 .pull-right[
 **Financial**
 * Minimal start-up cost
@@ -195,10 +187,8 @@ Place ONT VIDEO in here
 
 ---
 
-class: ont-slide
-
 ## Basecalling methods
-### GPU & CPU.
+### GPU &amp; CPU.
 * GPUs much faster. .small[Guppy 1.8.3 is the current basecalling version]
 
 * Different algorithms give slightly different results.
@@ -211,8 +201,6 @@ class: ont-slide
 PROMETHION SPECIFIC
 
 ---
-
-class: ont-slide
 
 ## WUB
 * Software package repository from ONT.
@@ -232,15 +220,13 @@ NANOPORE SPECIFIC
 
 ---
 
-class: ont-slide
-
 ## WUB cont.
 
 .pull-left[
-<img src=./images/basestats.png width=100%>
+&lt;img src=./images/basestats.png width=100%&gt;
 ]
 .pull-right[
-<img src=./images/per_read_accuracies.png width=100%>
+&lt;img src=./images/per_read_accuracies.png width=100%&gt;
 
 ]
 
@@ -248,9 +234,8 @@ class: ont-slide
 
 NANOPORE SPECIFIC
 
----
 
-class: ont-slide
+---
 
 ## NanoPlot
 
@@ -267,7 +252,7 @@ class: ont-slide
 ]
 
 .pull-right[
-<img src="https://github.com/wdecoster/NanoPlot/raw/master/examples/scaled_MappingQualityvsAverageBaseQuality_kde.png" width="100%">
+&lt;img src="https://github.com/wdecoster/NanoPlot/raw/master/examples/scaled_MappingQualityvsAverageBaseQuality_kde.png" width="100%"&gt;
 ]
 
 ???
@@ -275,8 +260,6 @@ class: ont-slide
 NANOPORE SPECIFIC
 
 ---
-
-class: ont-slide
 
 ## Porechop, Filtlong, Unicycler
 
@@ -290,8 +273,6 @@ Ryan Wick's repos set for:
 NANOPORE SPECIFIC
 
 ---
-
-class: ont-slide
 
 # Nanopolish
 
@@ -329,12 +310,11 @@ NANOPORE SPECIFIC
 
 ---
 
-class: ont-slide
 
 ## Haplotyping-methylation combo
 
 .center[
-<img src="images/scott_paper_methylation_differences.png" width="55%">
+&lt;img src="images/scott_paper_methylation_differences.png" width="55%"&gt;
 ]
 
 .pull-left[
@@ -350,22 +330,18 @@ NANOPORE SPECIFIC
 
 ---
 
-class: ont-slide
-
 ## AGRF PromethION in focus
 
 Kit-9, sample sensitive, great N50!
 
 .pull-left[
-<img src=./images/example.yield.png width=80%>
+&lt;img src=./images/example.yield.png width=80%&gt;
 ]
 .pull-right[
-<img src=./images/example.weighted.hist.png width=80%>
+&lt;img src=./images/example.weighted.hist.png width=80%&gt;
 ]
 
 ---
-
-class: ont-slide
 
 ## Some tutorial references
 
@@ -380,6 +356,7 @@ Simple fastq to assembly notebook.
 
 NANOPORE SPECIFIC
 
+
 ---
 
 class: pacbio-slide
@@ -392,28 +369,28 @@ class: pacbio-slide
 
 Greater maturity in bioinformatics components. Much of what needs to be done can be done via the smrtlink.
 Read number restricted by the number of wells.
-Provide estimates of sequencing length and 
 
 # TODO
-Add expected yields in here
-ADD https://www.youtube.com/watch?v=WMZmG00uhwU&feature=youtu.be to link
-Add image https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiMqM-Z5c_iAhVCVH0KHUsACRsQjRx6BAgBEAU&url=https%3A%2F%2Fgithub.com%2Fben-lerch%2FCCS-3.0%2Fblob%2Fmaster%2FREADME.md&psig=AOvVaw1pDeCoQNzBw6_3pbCJqCIc&ust=1559736446254122
+ADD https://www.youtube.com/watch?v=WMZmG00uhwU&amp;feature=youtu.be to link
+Add image https://www.google.com/url?sa=i&amp;rct=j&amp;q=&amp;esrc=s&amp;source=images&amp;cd=&amp;ved=2ahUKEwiMqM-Z5c_iAhVCVH0KHUsACRsQjRx6BAgBEAU&amp;url=https%3A%2F%2Fgithub.com%2Fben-lerch%2FCCS-3.0%2Fblob%2Fmaster%2FREADME.md&amp;psig=AOvVaw1pDeCoQNzBw6_3pbCJqCIc&amp;ust=1559736446254122
 
 ---
 
 # Introduction to SMRTLINK
 
-Bioinformatics at a click-of-a-button!
+Bioinformatics at a click-of-a-button.
 
 ???
 
 Our SMRT-LINK runs on a singularity container, an is an on-demand device.
-So only running when we need it!
-SMRTLINK and its associated command-line version offer scatter-gather algorithms for each of the different services that we offer.
+
+
 
 ---
 
 # Subread vs CCS Read 
+
+
 
 ???
 
@@ -422,10 +399,10 @@ This increases the accuracy in the read with every additional cycle. Often with 
 
 Lima is a PacBio developed algorithm for converting subreads into concensus reads.
 
-https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjV6anVoNLiAhWPeisKHayrDEYQjRx6BAgBEAU&url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&ust=1559821129992274
+https://www.google.com/url?sa=i&amp;rct=j&amp;q=&amp;esrc=s&amp;source=images&amp;cd=&amp;ved=2ahUKEwjV6anVoNLiAhWPeisKHayrDEYQjRx6BAgBEAU&amp;url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&amp;psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&amp;ust=1559821129992274
 
 Or
-https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj6st7foNLiAhVTfH0KHbhKCBkQjRx6BAgBEAU&url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&ust=1559821129992274
+https://www.google.com/url?sa=i&amp;rct=j&amp;q=&amp;esrc=s&amp;source=images&amp;cd=&amp;ved=2ahUKEwj6st7foNLiAhVTfH0KHbhKCBkQjRx6BAgBEAU&amp;url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&amp;psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&amp;ust=1559821129992274
 
 ---
 
@@ -456,12 +433,7 @@ LAA amplicons can resolve haplotyping information and assembly of small importan
 
 ---
 
-# Denovo Assembly
-
-???
-
-Talk about Flye, wtdg2 and then hgap4.
-What can be done with the overall layout
+# Denovo Assembly Algorithms
 
 ---
 
@@ -491,3 +463,94 @@ Yield vs accuracy trade-off in per-flowcell
 
 Singularity.
 Vagrant.
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "pygments",
+"highlightLines": true,
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();</script>
+
+<script>
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
+</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
