Fixing up typo on long reads presentation

--- a/Long_Reads_QLD/Long_Reads_QLD.html
+++ b/Long_Reads_QLD/Long_Reads_QLD.html
@@ -738,7 +738,7 @@ class: long-slide
 **Pros**
 1. Less sensitive to sequencing errors.
 2. Handles larger repeats
-3. Low specificity can bubbles.
+3. Low specificity can reduce bubbles.
 ]
 .pull-right[
 **Cons**
